[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SinglePlayer.gd" type="Script" id=2]
[ext_resource path="res://models/FV510-Warrior/PlayerWarrior.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Score/Score.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/HUD/GameOver.tscn" type="PackedScene" id=5]

[node name="Game" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="GridMap" parent="Environment" index="0"]
gen_seed = 10

[node name="DirectionalLight" parent="Environment" index="2"]
light_cull_mask = 4294967295

[node name="Player" parent="." index="2" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 62.0699, 0, 57.8548 )

[node name="Score" parent="." index="8" instance=ExtResource( 4 )]
layer = 2
visible = false

[node name="GameOver" parent="." index="9" instance=ExtResource( 5 )]
visible = false

[connection signal="destroyed" from="Player" to="." method="_on_Player_destroyed"]
[connection signal="health_changed" from="Player" to="HUD" method="_on_Player_health_changed"]
[connection signal="main_gun_reloading" from="Player" to="HUD" method="_on_Player_main_gun_reloading"]
[connection signal="next" from="Score" to="." method="_on_Score_next"]
[connection signal="retry" from="Score" to="." method="_on_Score_retry"]
[connection signal="restarted" from="GameOver" to="." method="_on_GameOver_restarted"]
